--- a/finalMarketPlace/requirements.txt
+++ b/finalMarketPlace/requirements.txt
@@ -1,7 +1,21 @@
+# Web framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 jinja2==3.1.2
-telethon==1.33.1
 python-multipart==0.0.6
-
 aiofiles==23.2.1
+
+# Telegram integration
+telethon==1.33.1
+cryptg==0.4.0
+pyaes==1.6.1
+rsa==4.9.1
+emoji==2.8.0
+
+# Database
+sqlite3-binary==0.0.1   # (stdlib sqlite3 isn’t installable, but this avoids Render errors)
+
+# Utilities
+python-dotenv==1.0.1
+pyyaml==6.0.3
+typing-extensions==4.15.0
